--- a/.github/workflows/build-deploy-jb-plugin.yml
+++ b/.github/workflows/build-deploy-jb-plugin.yml
@@ -31,3 +31,9 @@ jobs:
       # Build the plugin
       - name: Build plugin
         run: ./gradlew buildPlugin
+
+      # Publish the plugin to JetBrains Marketplace
+      - name: Publish plugin
+        run: ./gradlew publishPlugin
+        env:
+            ORG_GRADLE_PROJECT_intellijPublishToken: ${{ secrets.INTELLIJ_PUBLISH_TOKEN }}
