--- a/.github/workflows/build-deploy-jb-plugin.yml
+++ b/.github/workflows/build-deploy-jb-plugin.yml
@@ -31,21 +31,13 @@ jobs:
       # Build the plugin
       - name: Build plugin
         run: ./gradlew buildPlugin
-        
-      - name: Debug - Check Secret Availability
-        run: |
-          if [ -n "${{ secrets.INTELLIJ_PUBLISH_TOKEN }}" ]; then
-            echo "Secret is available (not showing actual value)"
-          else
-            echo "Secret is NOT available!"
-          fi
-    
-      # Publish the plugin to JetBrains Marketplace
-      - name: Publish plugin
-        run: ./gradlew publishPlugin
-        # run: ./gradlew publishPlugin -PintellijPlatformPublishingToken=${{ secrets.INTELLIJ_PUBLISH_TOKEN }}
+
+      - name: Sign plugin
+        run: ./gradlew signPlugin
         env:
-            ORG_GRADLE_PROJECT_intellijPublishToken: ${{ secrets.INTELLIJ_PUBLISH_TOKEN }}
-        # env:
-          # INTELLIJ_PUBLISH_TOKEN: ${{ secrets.INTELLIJ_PUBLISH_TOKEN }}
-          # ORG_GRADLE_PROJECT_intellijPublishToken: ${{ secrets.INTELLIJ_PUBLISH_TOKEN }}
+            ORG_GRADLE_PROJECT_intellijPublishToken: ${{ secrets.INTELLIJ_PUBLISH_TOKEN }} # change name to PUBLISH_TOKEN
+            CERTIFICATE_CHAIN: ${{ secrets.CERTIFICATE_CHAIN }}
+            PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+            PRIVATE_KEY_PASSWORD: ${{ secrets.PRIVATE_KEY_PASSWORD }}
+
+
