--- a/.github/workflows/build-deploy-jb-plugin.yml
+++ b/.github/workflows/build-deploy-jb-plugin.yml
@@ -1,25 +1,22 @@
 name: Build and Deploy Plugin
 
 on:
-  workflow_dispatch: # Allows manual triggering of the workflow
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up JDK 17
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Cache Gradle dependencies
       - name: Cache Gradle dependencies
         uses: actions/cache@v3
         with:
@@ -28,14 +25,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # Build the plugin
       - name: Build plugin
         run: ./gradlew buildPlugin
 
-      - name: Sign plugin
-        run: ./gradlew signPlugin
+      - name: Publish plugin
+        run: ./gradlew publishPlugin
         env:
-            ORG_GRADLE_PROJECT_intellijPublishToken: ${{ secrets.INTELLIJ_PUBLISH_TOKEN }} # change name to PUBLISH_TOKEN
+            ORG_GRADLE_PROJECT_intellijPublishToken: ${{ secrets.INTELLIJ_PUBLISH_TOKEN }}
             CERTIFICATE_CHAIN: ${{ secrets.CERTIFICATE_CHAIN }}
             PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
             PRIVATE_KEY_PASSWORD: ${{ secrets.PRIVATE_KEY_PASSWORD }}
