--- a/.github/workflows/build-deploy-jb-plugin.yml
+++ b/.github/workflows/build-deploy-jb-plugin.yml
@@ -29,11 +29,12 @@ jobs:
         run: ./gradlew buildPlugin
 
       - name: Publish plugin
-        run: ./gradlew publishPlugin
+        run: |
+          ./gradlew check
+          ./gradlew runPluginVerifier
+
         env:
             ORG_GRADLE_PROJECT_intellijPublishToken: ${{ secrets.INTELLIJ_PUBLISH_TOKEN }}
             CERTIFICATE_CHAIN: ${{ secrets.CERTIFICATE_CHAIN }}
             PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
             PRIVATE_KEY_PASSWORD: ${{ secrets.PRIVATE_KEY_PASSWORD }}
-
-
